# Flipkart-Product-Recommender-GCP

./: .gitignore  pyproject.toml
flipkart/: __init__.py  config.py  data_convertor.py  data_ingestion.py
