[project]
name = "flipkart-product-recommender-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain==1.2.1",
    "langchain-astradb==1.0.0",
    "langchain-huggingface==1.2.0",
    "langchain-groq==1.1.1",
    "langchain-community==0.4.1",
    "datasets==4.4.2",
    "pypdf==6.5.0",
    "python-dotenv==1.2.1",
    "pandas==2.3.3",
    "flask==3.1.2",
    "prometheus_client==0.23.1",
    "setuptools==80.9.0",
    "streamlit==1.52.2",
]
